UI softlock when first property of an operator is String #36109

Closed
opened 2013-07-12 10:16:33 +02:00 by Tom Edwards · 4 comments

%%%--- Operating System, Graphics card ---
Win7 x64, Geforce GTX 560

- Blender version with error, and version that worked ---

2.67, 2.68 RC1, trunk

2.66 is not affected

- Short description of error ---

Whenever the first property of an operator is a string, that property's UI element is highlighted in the operator redo panel after each execution. Deselecting the text (by any means; Esc or Enter are the same as clicking) causes the operator to run again, leading to the text being selected again, leading to an unbreakable loop.

The only action left available to the user is closing the Blender window via the OS. Thankfully this causes the session to be saved so no data is lost (assuming the user knows about session recovery).

- Steps for others to reproduce the error (preferably based on attached .blend file) ---

Open the attached blend and perform PoseLib Rename (Ctrl+Shift+L) or any other OPTYPE_REGISTER operator which has a string as its first RNA property.
%%%

%%%--- Operating System, Graphics card --- Win7 x64, Geforce GTX 560 - Blender version with error, and version that worked --- 2.67, 2.68 RC1, trunk 2.66 is not affected - Short description of error --- Whenever the first property of an operator is a string, that property's UI element is highlighted in the operator redo panel after each execution. Deselecting the text (by any means; Esc or Enter are the same as clicking) causes the operator to run again, leading to the text being selected again, leading to an unbreakable loop. The only action left available to the user is closing the Blender window via the OS. Thankfully this causes the session to be saved so no data is lost (assuming the user knows about session recovery). - Steps for others to reproduce the error (preferably based on attached .blend file) --- Open the attached blend and perform PoseLib Rename (Ctrl+Shift+L) or any other OPTYPE_REGISTER operator which has a string as its first RNA property. %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%disable this feature since it wasn't working for a while and isnt used in many places, r58197.
closing.%%%

%%%disable this feature since it wasn't working for a while and isnt used in many places, r58197. closing.%%%

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

%%%Note better fix committed r60626. enabled again.%%%

%%%Note better fix committed r60626. enabled again.%%%
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
2 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#36109
No description provided.