fix [#36109] UI softlock when first property of an operator is String disable editing a string on operator UI popups, causes feedback loop